# rppr_stats

./: .gitignore  Makefile  README.md  analysis.ipynb  pyproject.toml  requirements.txt
sparql/: children.sparql  hp-ct-terms-by-branch.sparql
stats/: gh_hp.md  grainyhead_exomiser.md  grainyhead_hp.md  grainyhead_maxo.md  grainyhead_mondo.md  grainyhead_mondo_2017.tsv  grainyhead_mondo_2018.tsv  grainyhead_mondo_2019.tsv  grainyhead_mondo_2020.tsv  grainyhead_mondo_2021.tsv  grainyhead_mondo_2022.tsv  grainyhead_mondo_2023.tsv  grainyhead_mondo_2024.tsv  grainyhead_oba.md  grainyhead_sssom.md  grainyhead_uberon.md  grh_by_user_mondo.md  hp_diff.txt  hp_diff.txt.yaml  hp_diff_summary.txt  maxo_diff.txt  maxo_diff.txt.yaml  maxo_diff_summary.txt  maxo_statistics_summary.txt  mondo_diff.txt.yaml  mondo_diff_summary.txt  oba_diff.txt.yaml  uberon_diff.txt.yaml
